package pt.ipp.isep.dei.domain;

/**
 * The enum Registration status.
 */
public enum RegistrationStatus {
    /**
     * Pending registration status.
     */
    PENDING,
    /**
     * Approved registration status.
     */
    APPROVED,
    /**
     * Rejected registration status.
     */
    REJECTED
}
